--- a/app.yml
+++ b/app.yml
@@ -24,6 +24,8 @@ default_events:
   # - gollum
   # - issue_comment
   - issues
+  - discussion
+  - discussion_comment
 # - label
 # - milestone
 # - member
@@ -71,6 +73,7 @@ default_permissions:
   # Issues and related comments, assignees, labels, and milestones.
   # https://developer.github.com/v3/apps/permissions/#permission-on-issues
   issues: write
+  discussion: write
 
   # Search repositories, list collaborators, and access repository metadata.
   # https://developer.github.com/v3/apps/permissions/#metadata-permissions
