--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "probot": "^12.2.4"
+    "discord.js": "^13.15.1",
+    "install": "^0.13.0",
+    "npm": "^9.6.4",
+    "probot": "^12.2.4",
+    "ts-dotenv": "^0.9.1"
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
